--- a/_posts/2020-11-27-skill-3.md
+++ b/_posts/2020-11-27-skill-3.md
@@ -1,10 +1,9 @@
 ---
 category: "skill"
 name: Machine Learning
-level: -
+level: 
 value: 100%
 ---
-
 Regression (Linear, Logistic, Decision Trees, Random Forest Regressors, Ridge, Lasso, Elastic-net), 
 Classification (KNN, Random Forest Classifiers, SVM), 
 Clustering (K-Means, Fuzzy), Maximum Likelihood Estimation, 
